# serotonin

./: .gitignore  Cargo.toml  LICENSE  README.md  description.md  design.md  example.joy  main.joy  main.sero  out.txt
.cargo/: config.toml
libraries/: std.sero
programs/: cat.sero  fib.sero  perm.sero
serotonin/: Cargo.toml
serotonin-frontend/: Cargo.toml  README.md
serotonin-frontend/src/: lib.rs
serotonin-frontend/src/lexer/: errors.rs  lex.rs  mod.rs  token.rs
serotonin-frontend/src/parser/: ast.rs  definition.rs  import.rs  mod.rs  stack.rs
serotonin-frontend/src/semantic/: constraints.rs  errors.rs  mod.rs  solver.rs  symbol.rs
serotonin-frontend/src/semantic/solver/: definition.rs  positional.rs  union.rs
serotonin-lexer/: Cargo.toml
serotonin-lexer/src/: errors.rs  lex.rs  lib.rs  token.rs
serotonin-parser/: Cargo.toml
serotonin-parser/src/: ast.rs  definition.rs  errors.rs  import.rs  lib.rs  module.rs  stack.rs
serotonin-parser/src/lexer/: errors.rs  lex.rs  mod.rs  span.rs  token.rs
serotonin-parser/src/parser/: definition.rs  errors.rs  import.rs  mod.rs  module.rs  stack.rs
serotonin-semantics/: Cargo.toml
serotonin-semantics/src/: check.rs  errors.rs  lib.rs  solver.rs  symbol.rs  syntax.rs
serotonin-semantics/src/solver/: definition.rs  union.rs
serotonin/src/: debug.rs  main.rs
src/: bfoptimizer.rs  build.rs  config.rs  definition.rs  example.b  example.joy  gen.rs  joy.pest  lib.joy  lib.rs  main.rs  old_parser.rs  parse.rs  parser.rs  semantic.rs  serotonin.pest  stdlib.rs  test_compiler.rs  test_propagation.rs  test_std.rs  tests.rs  typ.rs  ut.pest
src/libraries/: stack.sero  std.joy  std.sero  test.joy  u16.joy  word.sero
