[package]
name = "serotonin"
version = "0.4.1"
edition = "2021"

build = "src/build.rs"

[dependencies]
pest = { git = "https://github.com/Alextopher/pest.git", branch = "master" }
pest_derive = "^2.0"
include_dir = "^0.7"
clap = "^3.2" 
colored = "^2.0"
either = "^1"
bfc-ir = { git = "https://github.com/Alextopher/bfc-ir.git", branch = "master" }
bfi = { git = "https://github.com/Alextopher/bfi.git", branch = "main" }

[dev-dependencies]
rand = "0.8.5"
rayon = "1.5.3"

[build-dependencies]
autoperm = { git = "https://github.com/Alextopher/autoperm.git", version = "0.1.0" }
