[package]
name = "serotonin-parser"
version = "1.0.0"
edition = "2021"

[dependencies]
colored = "2.0"
logos = "0.12"
# snailquote = "0.3"
snailquote = { git = "https://github.com/Alextopher/snailquote", branch = "interop" }
lasso = "0.7"
codespan-reporting = "0.11"
num = "0.4"

[dev-dependencies]
proptest = "1.1.0"