[package]
name = "serotonin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
serotonin-semantics = { path = "../serotonin-semantics" }
serotonin-parser = { path = "../serotonin-parser" }
lasso = "0.7"
colored = "2.0"
codespan-reporting = "0.11"
